@@ -14,11 +14,11 @@ import com.teaminabox.eclipse.wiki.text.WikiSpaceMatcher;
 
 public final class TwikiBrowserContentRenderer extends AbstractContentRenderer {
 	
-	private static final String WIKI_WORD_PATTERN = "(\\s)*([A-Z][^\\s]+[A-Z][^\\s]*)";
+	private static final String TWIKI_WORD_PATTERN = "[A-Z]+[a-z]+[A-Z]+\\w*";
 
-	private static final TextRegionMatcher[]	RENDERER_MATCHERS			= new TextRegionMatcher[] { new IgnoredTextRegionMatcher(), new JavaTypeMatcher(), new ForcedLinkMatcher(2), new WikiSpaceMatcher(), new WikiWordMatcher(WIKI_WORD_PATTERN), new NonLetterOrDigitMatcher(), new LetterOrDigitMatcher(), new UrlMatcher(), new EclipseResourceMatcher(), new PluginResourceMatcher() };
+	private static final TextRegionMatcher[]	RENDERER_MATCHERS			= new TextRegionMatcher[] { new IgnoredTextRegionMatcher(), new JavaTypeMatcher(), new ForcedLinkMatcher(2), new WikiSpaceMatcher(), new WikiWordMatcher(TWIKI_WORD_PATTERN), new NonLetterOrDigitMatcher(), new LetterOrDigitMatcher(), new UrlMatcher(), new EclipseResourceMatcher(), new PluginResourceMatcher() };
 
-	private static final TextRegionMatcher[]	SCANNER_MATCHERS			= new TextRegionMatcher[] { new IgnoredTextRegionMatcher(), new JavaTypeMatcher(), new ForcedLinkMatcher(2), new WikiSpaceMatcher(), new WikiWordMatcher(WIKI_WORD_PATTERN), new UrlMatcher(), new EclipseResourceMatcher(), new PluginResourceMatcher() };
+	private static final TextRegionMatcher[]	SCANNER_MATCHERS			= new TextRegionMatcher[] { new IgnoredTextRegionMatcher(), new JavaTypeMatcher(), new ForcedLinkMatcher(2), new WikiSpaceMatcher(), new WikiWordMatcher(TWIKI_WORD_PATTERN), new UrlMatcher(), new EclipseResourceMatcher(), new PluginResourceMatcher() };
 
 	private static final char				ORDERED_LIST_END_MARKER		= '.';
 
